# dqn_con_libtorch

./: .gitignore  CMakeLists.txt  README.md  download_libtorch.sh  resultados_entrenamiento.txt
doc/: CAMBIOS.md  Makefile  RESUMEN.md  proyecto_dqn.tex
src/: cartpole.cpp  cartpole.h  dqn_agent.cpp  dqn_agent.h  main.cpp  model.h  replay_buffer.cpp  replay_buffer.h
